@@ -1,12 +1,11 @@
 package de.almostintelligent.fhwsplan.data;
 
-import android.sax.StartElementListener;
 import android.util.Log;
 
 public class PlanTime// implements Comparable<PlanTime>
 {
 
-	private Integer	iID				= new Integer(0);
+	private Integer	iID				= Integer.valueOf(0);
 	private String	strDescription	= new String();
 
 	private String	strStartTime	= new String();
